# vsm

./: .gitignore  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/default/.dune/: configurator  configurator.v2
_build/default/language_server/: language_server.dune-package
_build/default/language_server/lib/: language_server.cmxa
_build/default/language_server/lib/.language_server.objs/byte/: language_server.cmi  language_server.cmo  language_server.cmt
_build/default/language_server/lib/.language_server.objs/native/: language_server.cmx
_build/default/language_server/lib/.merlin-conf/: lib-language_server
_build/install/default/lib/language_server/: META  dune-package  opam
client/: package-lock.json  package.json  tsconfig.tsbuildinfo
client/src/: extension.ts
language_server/: .ocamlformat  dune-project  language_server.install  language_server.opam  log.txt
language_server/_build/: log
language_server/lib/: dune  lexer.mll  m.ml  simple_checker.mli  syntax.ml
language_server/test/: dune
server/: dune-project  server.opam
server/dm/: codeLens.ml  diagnostic.ml  document.ml  dune  hover.ml  inference.ml  init.ml  protocol.ml  range.ml  tokens.ml
server/language/: dune  lexer.mll  m.ml  parser.mly  poly_checker.mli  syntax.ml
server/lib/: dune  inference.mli  interp.ml  interp.mli  m.ml  m.mli  parser.mly  simple_checker.mli  syntax.ml  syntax.mli
syntaxes/: mlang.tmLanguage.json
