(lang dune 3.14)

(using menhir 3.0)

(name language_server)

(generate_opam_files true)

(source
 (github bloomwayz/vsm))

(authors "PARK Junyoung")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name language_server)
 (synopsis "Language M")
 (description "Language M")
 (depends
  ocaml
  dune
  (core
   (>= 0.17.1))
  (core_unix
   (>= 0.17.0))
  (string_dict
   (>= 0.17.0))
  (ppx_jane
   (>= 0.17.0))
  yojson
  string_dict
  (menhir
   (>= 20231231)))
 (tags ("Programming Language")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project