(lang dune 3.16)

(using menhir 3.0)

(name server)

(generate_opam_files true)

(source
 (github bloomwayz/vsm))

(authors "Junyoung Park")

(maintainers "Junyoung Park")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name server)
 (synopsis "M Langauge Server")
 (description "M Langauge Server")
 (depends
  ocaml
  dune
  yojson
  (ocaml-base-compiler
    (= 5.2.0))
  ocaml-compiler-libs
  (core
   (>= 0.17.1))
  (core_unix
   (>= 0.17.0))
  (string_dict
   (>= 0.17.0))
  (ppx_jane
   (>= 0.17.0))
  (menhir
   (>= 3.0)))
 (tags ("Programming Language")))
